RAZ-3180: Fix wrapping of folder view in 'Choose folder' views - Tweaked css to not wrap in 'Choose folder' windows

--- a/global/host/dam/views/layouts/main.css
+++ b/global/host/dam/views/layouts/main.css
@@ -1006,7 +1006,7 @@ font-weight: bold;
 	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
 	white-space: -pre-wrap;      /* Opera 4-6 */
 	white-space: -o-pre-wrap;    /* Opera 7 */
-	white-space: pre-wrap !important;       /* css-3 */
+	white-space: pre-wrap;       /* css-3 */
 	word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 .tree li a, 
@@ -1015,6 +1015,6 @@ font-weight: bold;
 	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
 	white-space: -pre-wrap;      /* Opera 4-6 */
 	white-space: -o-pre-wrap;    /* Opera 7 */
-	white-space: pre-wrap !important;       /* css-3 */
+	white-space: pre-wrap;       /* css-3 */
 	word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
